<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/shape_divider"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
        android:id="@+id/user_avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingStart="@dimen/normal_padding"
        android:paddingTop="@dimen/inner_padding"
        android:paddingEnd="@dimen/normal_padding"
        android:paddingBottom="@dimen/inner_padding" >

        <TextView
            style="@style/TextViewStyle.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_avatar" />

        <com.swpu.funchat.widget.RadiusImageView
            android:id="@+id/user_avatar"
            android:layout_width="@dimen/user_avatar_side"
            android:layout_height="@dimen/user_avatar_side"
            android:src="@color/red_400"
            app:radius="@dimen/user_avatar_radius" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/ic_indicator_arrow_right"
            android:tint="@color/icon_tint_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_nickname_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/option_item_height"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingStart="@dimen/normal_padding"
        android:paddingEnd="@dimen/normal_padding">

        <TextView
            style="@style/TextViewStyle.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_nickname" />

        <TextView
            android:id="@+id/user_nickname"
            style="@style/TextViewStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="张三" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/ic_indicator_arrow_right"
            android:tint="@color/icon_tint_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_funchat_account_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/option_item_height"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingStart="@dimen/normal_padding"
        android:paddingEnd="@dimen/normal_padding">

        <TextView
            style="@style/TextViewStyle.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_funchat_account" />

        <TextView
            android:id="@+id/user_funchat_account"
            style="@style/TextViewStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="253908058" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/ic_indicator_arrow_right"
            android:tint="@color/icon_tint_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_dimensional_barcode_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/option_item_height"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingStart="@dimen/normal_padding"
        android:paddingEnd="@dimen/normal_padding">

        <TextView
            style="@style/TextViewStyle.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_dimensional_barcode" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/ic_dimensional_barcode"
            android:tint="@color/icon_tint_color" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/ic_indicator_arrow_right"
            android:tint="@color/icon_tint_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_more_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/option_item_height"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingStart="@dimen/normal_padding"
        android:paddingEnd="@dimen/normal_padding">

        <TextView
            style="@style/TextViewStyle.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_more" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/ic_indicator_arrow_right"
            android:tint="@color/icon_tint_color" />

    </LinearLayout>

</LinearLayout>